--- a/public/about.html
+++ b/public/about.html
@@ -5,10 +5,12 @@
         <title>About me</title>
     </head>
     <body>
-        <img
-            src="../assets/images/Abdurahman_bullet.png"
-            alt="Abdurahman.png"
-        />
+        <a href="../index.html">
+            <img
+                src="../assets/images/Abdurahman_bullet.png"
+                alt="Abdurahman foto"
+            />
+        </a>
         <h1>Abdurahman</h1>
         <p>
             <em
@@ -84,7 +86,10 @@
 
         <footer>
             <p>
-                develop by: rahmann_ui<a href="https://www.instagram.com/rahmann_ui">@instagram</a>&copy; 2023-04-16
+                develop by: rahmann_ui<a
+                    href="https://www.instagram.com/rahmann_ui"
+                    >@instagram</a
+                >&copy; 2023-04-16
             </p>
         </footer>
     </body>
