--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
             src="./assets/images/Abdurahman_bullet.png"
             alt="Abdurahman foto"
         />
-        <h1>Abdurahman Portofolio</h1>
+        <h1>Abdurahman Portofolio pertama</h1>
         <h2>I'm a Web Developer</h2>
         <hr />
 
